# auto-quorum

./: .gitignore  2  Cargo.toml  README.md  client.dockerfile  etcd-client.dockerfile  multileader-server.dockerfile  server.dockerfile
benchmarks/: .gitignore  README.md  autoquorum_cluster.py  autoquorum_configs.py  benchmarks.py  etcd_cluster.py  etcd_configs.py  graph_experiment.py  graph_experiment_met.py  graph_experiments.ipynb  metronome_cluster.py  metronome_configs.py  pyproject.toml  setup-gcp.sh
benchmarks/clusters/: autoquorum_cluster.py  autoquorum_configs.py  base_cluster.py  etcd_cluster.py  etcd_configs.py  gcp_cluster.py  gcp_ssh_client.py  multileader_cluster.py  multileader_configs.py
benchmarks/clusters/startup_scripts/: __init__.py  instance_startup_script.sh  run_client.sh  run_etcd_server.sh  run_server.sh
benchmarks/experiments/: base_experiment.py  even_load_experiment.py  experiment_data.py  mixed_strats_experiment.py  read_strats_experiment.py  round_robin_experiment.py  shifting_conditions_experiment.py
benchmarks/graphs/: base_graphs.py  colors.py  debug_graphs.py  even_load.py  mixed_strats.py  read_strats.py  round_robin.py  shifting_conditions.py
benchmarks/scripts/: project_env_template  push-client-image.sh  push-server-image.sh
benchmarks/startup_scripts/: instance_startup_script.sh  run_etcd_server.sh
build_scripts/: client-1-config.toml  client-2-config.toml  client-3-config.toml  cluster-config.toml  docker-compose.yml  etcd-docker-compose.yml  push-client-image.sh  push-server-image.sh  run-local-client.sh  run-local-cluster.sh  server-1-config.toml  server-2-config.toml  server-3-config.toml
common/: Cargo.toml
common/src/: kv.rs  lib.rs  messages.rs  util.rs
omnipaxos_client/: Cargo.toml  Dockerfile
omnipaxos_client/src/: client.rs  main.rs  multi_client.rs  network.rs
omnipaxos_server/: Cargo.toml  Dockerfile
omnipaxos_server/src/: database.rs  main.rs  messages.rs  metrics.rs  network.rs  optimizer.rs  read.rs  router.rs  server.rs
omnipaxos_storage/: Cargo.toml
omnipaxos_storage/src/: lib.rs
src/: common.rs
src/client/: client.rs  client_old.rs  configs.rs  data_collection.rs  main.rs  network.rs
src/etcd-client/: client.rs  configs.rs  main.rs
src/multileader-server/: configs.rs  main.rs  metrics.rs  network.rs  server.rs
src/server/: configs.rs  database.rs  main.rs  metrics.rs  network.rs  optimizer.rs  read.rs  server.rs
