[package]
name = "omnipaxos_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omnipaxos = { git = "https://github.com/kevin-harrison/omnipaxos.git", branch = "auto-quorum", features = ["serde"] }
common = { path = "../common" }
tokio = { version = "1.35.1", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["cbor"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
futures = "0.3.30"
lazy_static = "1.4.0"
tokio-stream = "0.1.14"
anyhow = "1.0.80"
log = "0.4.20"
rand = "0.8.5"
rand_distr = "0.4.3"
chrono = "0.4.34"
toml = "0.8.11"

[[bin]]
name = "client"
path = "src/main.rs"
