[package]
name = "omnipaxos_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
env_logger = "0.10.1"
futures = "0.3.30"
log = "0.4.20"
omnipaxos = { git = "https://github.com/kevin-harrison/omnipaxos.git", branch = "auto-quorum", features = ["serde"] }
omnipaxos_storage = { path = "../omnipaxos_storage" }
serde = "1.0.194"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["cbor"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
