[package]
name = "omnipaxos_storage"
version = "0.2.2"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2021"
description = "Storage implementations for OmniPaxos."
readme = "README.md"

[dependencies]
omnipaxos = { git = "https://github.com/kevin-harrison/omnipaxos.git", branch = "auto-quorum", features = ["serde"] }
